Fixed a bug in the hero section which made the sectin content overflow on small heights

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,9 @@
 .hero {
   @include u.flex(center, flex-start);
 
-  height: calc(100vh - u.$navbar-height);
+  height: calc(100% - u.$navbar-height);
+  min-height: 100dvh;
+  min-height: 100vh;
   width: 100%;
   background: url("../images/hero.png") no-repeat center center/cover;
   background-color: hsla(0, 0%, 0%, 0.685);
@@ -16,12 +18,12 @@
 
   // Medium Screens
   @include u.breakpoint("medium") {
-    height: calc(100vh - u.$rows-navbar-height);
+    height: calc(100% - u.$rows-navbar-height);
   }
 
   // Small Screens
   @include u.breakpoint("small") {
-    height: calc(100vh - u.$navbar-height);
+    height: calc(100% - u.$navbar-height);
   }
 
   .showcase {
@@ -32,8 +34,3 @@
     }
   }
 }
-
-
-
-
-
